# space-lens

./: .gitattributes  .gitignore  .gitmodules  .yarnrc.yml  AGENTS.md  Cargo.toml  README.md  cli.ts  index.d.ts  index.js  package.json
.agents/skills/effect-ts-paulrberg/: SKILL.md
.github/workflows/: CI.yml  npm-cli.yml
.journal/: 2026-06-12-2252.md
__test__/: benchmark-cli.spec.mjs  index.spec.mjs  index.spec.ts
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/tui/: README.md  package.json  tsconfig.json  tsdown.config.ts
apps/tui/src/: cli-config.test.ts  cli-config.ts  cli-program.ts  cli.ts  index.ts  model.test.ts  model.ts  runtime.test.ts  runtime.ts  scanner.ts  ui.ts
docs/superpowers/specs/: 2026-06-13-monorepo-workspace-design.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: benchmark-cli.ts  benchmark.ts
src/: lib.rs  scanner.rs
