[package]
edition = "2021"
name = "space-lens"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
du-dust = { git = "https://github.com/HuakunShen/dust.git", rev = "4a3b43092c43592dc8dd7ba875f3a299049de59d" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
