
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "space_lens"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
ignore = "0.4"
rayon = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
