[workspace]
members  = ["packages/space-lens", "packages/node", "apps/cli"]
resolver = "2"

  [workspace.package]
  authors    = ["HuakunShen"]
  edition    = "2021"
  license    = "MIT"
  repository = "https://github.com/HuakunShen/space-lens"
  version    = "0.2.0"

[profile.release]
lto   = true
strip = "symbols"
